@@ -4961,7 +4961,15 @@ package TestCase {
     
     return 0;
   }
-  
+
+  sub array : int () {
+    
+    my $nums = new int[(byte)3];
+    $nums->[2] = 4;
+    if ($nums->[(byte)2] == 4) {
+      return 1;
+    }
+  }
   sub array_set_and_get_array_element_first : int () {
     
     my $nums = new int[3];
